--- a/sys/boot/pc32/Makefile
+++ b/sys/boot/pc32/Makefile
@@ -5,7 +5,7 @@
 .endif
 
 # must come before boot2
-SUBDIR=	asmdef btx
+SUBDIR=	asmdef btx btxld
 
 SUBDIR+=boot0 boot0sio boot2 cdboot libi386 loader loader_tftp mbr
 
