--- a/gnu/usr.bin/cc47/cc_tools/tools/Makefile
+++ b/gnu/usr.bin/cc47/cc_tools/tools/Makefile
@@ -144,7 +144,11 @@ CLEANDIRS+=	common c-family
 dossier:
 	mkdir -p common c-family
 
+.if defined(LIBGCC_ONLY)
+genfiles: ${GENTOOLS:Mgcov-iov*} ${GENFILES:Mgcov-io*}
+.else
 genfiles: ${GENTOOLS} ${GENFILES}
+.endif
 depend all: dossier genfiles
 
 .include <bsd.obj.mk>
