--- a/gnu/usr.bin/cc50/cc_tools/Makefile
+++ b/gnu/usr.bin/cc50/cc_tools/Makefile
@@ -1,6 +1,10 @@
 # Both libraries must be built before "tools"
 # Just don't define SUBDIR_ORDERED and it will build serially, correctly
 
+.if defined(LIBGCC_ONLY)
+SUBDIR=  libiberty tools
+.else
 SUBDIR=  libcpp libiberty tools
+.endif
 
 .include <bsd.obj.mk>
