--- a/gnu/usr.bin/cc47/Makefile
+++ b/gnu/usr.bin/cc47/Makefile
@@ -1,3 +1,10 @@
+# if wrapper mode
+.if (defined(NO_CROSSTOOLS) && defined(BOOTSTRAPPING)) || \
+    (!defined(BOOTSTRAPPING) && defined(NO_TOOLCHAIN))
+.include "Makefile.zhack"
+.else
+
+# normal mode
 SUBDIR= 	cc_prep
 SUBDIR+=	libiberty
 SUBDIR+=	libdecnumber
@@ -20,3 +27,4 @@ SUBDIR+=	cc1obj
 .ORDER: ${SUBDIR}
 
 .include <bsd.subdir.mk>
+.endif
