--- a/gnu/usr.bin/gmp/Makefile
+++ b/gnu/usr.bin/gmp/Makefile
@@ -1,3 +1,10 @@
+# if wrapper mode
+.if (defined(NO_CROSSTOOLS) && defined(BOOTSTRAPPING)) || \
+    (!defined(BOOTSTRAPPING) && defined(NO_TOOLCHAIN))
+.include "Makefile.zhack"
+.else
+
+# normal mode
 LIB=	gmp
 INTERNALLIB=	# yes
 
@@ -273,3 +280,4 @@ mkdirs:
 	mkdir -p ${GENDIRS}
 
 .include <bsd.lib.mk>
+.endif
