kernel/hpt*: Mangle names of foreign binary objects.
We already do it for the firmware objects (.fwo). Explictly handle
unpacked precompiled objects to separate them from other generic ones.
These are not device firmware and they do run on CPU, also they have
different osabi tag, so without adjustment the ld.gold (default ld)
will change osabi for the whole linked object.
Having them seprated from the rest simplifies the depend logic, such
objects have no source or headers dependencies other than hardcoded
one in Makefiles. Add missing dependencies on .uu in kernel modules.

--- a/sys/dev/raid/hptrr/Makefile
+++ b/sys/dev/raid/hptrr/Makefile
@@ -4,10 +4,12 @@
 KMOD = hptrr
 SRCS = opt_scsi.h opt_cam.h bus_if.h device_if.h pci_if.h os_bsd.h
 SRCS+= hptrr_os_bsd.c hptrr_osm_bsd.c hptrr_config.c
-OBJS = hptrr_lib.o
+OBJS = hptrr_lib.bo
 
-hptrr_lib.o:
-	uudecode -p < ${.CURDIR}/$(MACHINE_ARCH)-elf.hptrr_lib.o.uu > ${.TARGET}
+hptrr_lib.bo:	$(MACHINE_ARCH)-elf.hptrr_lib.o.uu
+	uudecode -o ${.TARGET} < ${.ALLSRC}
 	elfedit --output-osabi none ${.TARGET}
+
+CLEANFILES+= hptrr_lib.bo
 
 .include <bsd.kmod.mk>
