--- a/sys/dev/raid/hpt27xx/Makefile
+++ b/sys/dev/raid/hpt27xx/Makefile
@@ -4,10 +4,12 @@ KMOD=	hpt27xx
 SRCS=	bus_if.h device_if.h pci_if.h
 SRCS+=	opt_cam.h opt_scsi.h
 SRCS+=	hpt27xx_os_bsd.c hpt27xx_osm_bsd.c hpt27xx_config.c
-OBJS+=	hpt27xx_lib.o
+OBJS+=	hpt27xx_lib.bo
 
-hpt27xx_lib.o:
-	uudecode -p < ${.CURDIR}/$(MACHINE_ARCH)-elf.hpt27xx_lib.o.uu > ${.TARGET}
+hpt27xx_lib.bo:	$(MACHINE_ARCH)-elf.hpt27xx_lib.o.uu
+	uudecode -o ${.TARGET} < ${.ALLSRC}
 	elfedit --output-osabi none ${.TARGET}
+
+CLEANFILES+= hpt27xx_lib.bo
 
 .include <bsd.kmod.mk>
