--- a/sys/dev/raid/hptmv/Makefile
+++ b/sys/dev/raid/hptmv/Makefile
@@ -8,11 +8,13 @@ KMOD= hptmv
 SRCS= opt_scsi.h opt_cam.h
 SRCS+= bus_if.h device_if.h pci_if.h
 SRCS+= mv.c entry.c ioctl.c hptproc.c gui_lib.c
-OBJS+= hptmvraid.o
+OBJS+= hptmvraid.bo
 
-hptmvraid.o:
-	uudecode -p < ${.CURDIR}/$(MACHINE_ARCH)-elf.raid.o.uu > ${.TARGET}
+hptmvraid.bo:	$(MACHINE_ARCH)-elf.raid.o.uu
+	uudecode -o ${.TARGET} < ${.ALLSRC}
 	elfedit --output-osabi none ${.TARGET}
+
+CLEANFILES+= hptmvraid.bo
 
 #
 # Debug Options:
