--- a/etc/defaults/mkinitrd.conf
+++ b/etc/defaults/mkinitrd.conf
@@ -2,6 +2,8 @@
 #
 BOOT_DIR="/boot"
 CONTENT_DIRS="/usr/share/initrd"
-INITRD_DIRS="bin dev etc sbin tmp var new_root"
+# NOTE: 'new_root' will always be created, and 'tmp' will be symlinked
+#       to 'var/tmp'.
+INITRD_DIRS="bin dev etc mnt sbin var"
 INITRD_SIZE_MAX="15"  # MB
 TMP_DIR="/tmp"
