--- a/initrd/sbin.libcrypto/Makefile
+++ b/initrd/sbin.libcrypto/Makefile
@@ -1,12 +1,7 @@
 #$FreeBSD: head/rescue/rescue/Makefile 252356 2013-06-28 21:00:08Z davide $
 #	@(#)Makefile	8.1 (Berkeley) 6/2/93
 
-NOMAN=
-
-.include <bsd.own.mk>
-
-PROG=	sbin.libcrypto
-BINDIR=	/usr/share/initrd/sbin
+PROG=	rescue.libcrypto
 
 CRUNCH_SRCDIRS+= sbin
 CRUNCH_PROGS_sbin= tcplay	\
