--- a/nrelease/Makefile
+++ b/nrelease/Makefile
@@ -1,5 +1,5 @@
 #########################################################################
-#				ENHANCEMENTS	 			#
+#				ENHANCEMENTS				#
 #########################################################################
 
 # New method e.g. 'make gui release'.  A series of enhancement
@@ -11,7 +11,7 @@
 gui installer img nopkgs:
 
 #########################################################################
-#				 SETUP		 			#
+#				 SETUP					#
 #########################################################################
 
 DPORTS_PATH?=	/usr/dports
@@ -76,10 +76,6 @@ IMGFILE?=		${ISODIR}/dfly-gui.img
 
 # NOTE: order important, do not sort package list
 #
-# Apps we want in the gui build but which have problems building:
-#	chat/xchat	link error on x86-64, something about ___progname
-#
-#
 .if !make(nopkgs)
 DPORTS_PACKAGES+=	x11/xorg \
 			x11-wm/fluxbox \
@@ -123,7 +119,7 @@ IMGUSBDEV ?= da8
 NRLOBJDIR?= /usr/obj
 
 #########################################################################
-#				BASE ISO TARGETS 			#
+#				BASE ISO TARGETS			#
 #########################################################################
 
 release:	check clean buildworld1 buildkernel1 \
@@ -179,7 +175,7 @@ buildkernel1 buildkernel2:
 
 # note that we do not want to mess with any /usr/obj directories not related
 # to buildworld, buildkernel, or nrelease, so we must supply the proper
-# MAKEOBJDIRPREFIX for targets that are not run through the buildworld and 
+# MAKEOBJDIRPREFIX for targets that are not run through the buildworld and
 # buildkernel mechanism.
 #
 # Unconditionally clean out ${ISOROOT} so a previous img build
@@ -189,7 +185,6 @@ buildkernel1 buildkernel2:
 # We leave the kernel's debug variables intact.
 #
 buildiso:
-	-rm -rf ${ISOROOT}
 	-chflags -R noschg ${ISOROOT}
 	rm -rf ${ISOROOT}
 	mkdir -p ${ISOROOT}
@@ -204,12 +199,7 @@ buildiso:
 	done
 	rm -rf ${ISOROOT}/boot/kernel.old
 	ln -sf kernel ${ISOROOT}/boot/kernel/kernel.BOOTP
-	# This next mkinitrd has to be the INSTALLED version because else we
-	# can't rely on the -c option being present, but it needs to be run
-	# OUTSIDE of the chroot because it might want to load vn(4) and can't
-	# do so from inside of it.
-	#
-	${ISOROOT}/sbin/mkinitrd -c ${ISOROOT}/usr/share/initrd -b ${ISOROOT}/boot
+	( cd ${.CURDIR}/..; make DESTDIR=${ISOROOT} initrd )
 	mtree -deU -f ${.CURDIR}/../etc/mtree/BSD.var.dist -p ${ISOROOT}/var
 	dev_mkdb -f ${ISOROOT}/var/run/dev.db ${ISOROOT}/dev
 
