--- a/share/Makefile
+++ b/share/Makefile
@@ -1,11 +1,30 @@
 #	@(#)Makefile	8.1 (Berkeley) 6/5/93
 # $FreeBSD: src/share/Makefile,v 1.22.2.4 2002/03/12 17:13:32 phantom Exp $
 
-SUBDIR= colldef dict doc examples i18n initrd locale-links \
-	man me misc mk ctypedef monetdef msgdef \
-	numericdef skel syscons tabset termcap terminfo timedef zoneinfo
+SUBDIR= colldef \
+	ctypedef \
+	dict \
+	doc \
+	examples \
+	i18n \
+	locale-links \
+	man \
+	me \
+	misc \
+	mk \
+	monetdef \
+	msgdef \
+	numericdef \
+	skel \
+	syscons \
+	tabset \
+	termcap \
+	terminfo \
+	timedef \
+	zoneinfo
 
-SUBDIR_ORDERED=		# maximum parallism
+# maximum parallism
+SUBDIR_ORDERED=
 
 .if defined(WANT_INSTALLER)
 SUBDIR+= installer
