--- a/initrd/sbin/Makefile
+++ b/initrd/sbin/Makefile
@@ -1,14 +1,9 @@
 #$FreeBSD: head/rescue/rescue/Makefile 252356 2013-06-28 21:00:08Z davide $
 #	@(#)Makefile	8.1 (Berkeley) 6/2/93
 
-NOMAN=
-
-.include <bsd.own.mk>
-
 PROG=	rescue.sbin
-BINDIR=	/usr/share/initrd/sbin
 
-SCRIPTS= ../../../sbin/dhclient/dhclient-script
+SCRIPTS= ${.CURDIR}/../../sbin/dhclient/dhclient-script
 
 CRUNCH_SRCDIRS+= sbin
 CRUNCH_PROGS_sbin=	\
