--- a/initrd/sbin.libcrypto/Makefile
+++ b/initrd/sbin.libcrypto/Makefile
@@ -4,6 +4,7 @@
 PROG=	rescue.libcrypto
 
 CRUNCH_SRCDIRS+= sbin
+CRUNCH_PATH_sbin= ${.CURDIR}/../..
 CRUNCH_PROGS_sbin= tcplay	\
 		    md5		\
 		    hammer	\
@@ -12,12 +13,14 @@ CRUNCH_PROGS_sbin= tcplay	\
 		    ping6
 
 CRUNCH_SRCDIRS+= gnu/sbin
+CRUNCH_PATH_gnu/sbin= ${.CURDIR}/../..
 CRUNCH_PROGS_gnu/sbin= cryptsetup
 
 CRUNCH_LIBS+= -ldm -lprop -ldmsg -lutil -lhammer -lpthread -lm
 CRUNCH_ALIAS_md5= rmd160
 
 CRUNCH_SRCDIRS+= usr.sbin/802_11
+CRUNCH_PATH_usr.sbin/802_11= ${.CURDIR}/../..
 CRUNCH_PROGS_usr.sbin/802_11= wpa_supplicant
 CRUNCH_LIBS+= -lpcap -lprivate_ssl -lmd -lprivate_crypto
 CRUNCH_LIBS+= ${PRIVATELIB_LDFLAGS}
