--- a/initrd/Makefile.inc
+++ b/initrd/Makefile.inc
@@ -6,3 +6,6 @@ WARNS?=		6
 CRUNCH_BUILDOPTS+= -DRESCUE
 # Define compile-time RESCUE symbol when compiling components
 CRUNCH_BUILDOPTS+= CRUNCH_CFLAGS=-DRESCUE
+
+# Use soft links to create the crunched program links
+#CRUNCH_USE_SYMLINKS=
