initrd: don't leave an empty /rescue after switching location
The recent initrd change will remove the rescue tools from their old
location (/usr/share/initrd) but leave an empty /rescue directory.  Avoid
such a situation by building the rescue tools after installworld if /rescue
is empty.

Suggested-by: François Tigeot

--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -489,6 +489,16 @@ installworld: installcheck
 
 	cd ${.CURDIR}; ${IMAKE} re${.TARGET:S/world$//}
 	${INSTALL} -o root -g wheel -m 644 ${.CURDIR}/Makefile_upgrade.inc ${DESTDIR}/etc/upgrade/
+
+	# Do not leave an empty /rescue directory when switching the rescue
+	# tools from /usr/share/initrd to /rescue.
+	@(if ! test -x ${DESTDIR}/rescue/rescue; then \
+	    echo "--------------------------------------------------------------"; \
+	    echo ">>> build and install rescue tools"; \
+	    echo "--------------------------------------------------------------"; \
+	    cd ${.CURDIR}; make rescue; \
+	fi)
+
 	sync
 	@echo "--------------------------------------------------------------"
 	@echo ">>> installworld target complete"
